# python-project-skeleton

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
src/: app.py
tests/: test_app.py
