[tool.poetry]
name = "dev"
version = "0.1.0"
description = "desc"
authors = ["cspoppuppy <cspoppuppy@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.1.1"
invoke = "^2.0.0"
pytest-cov = "^4.0.0"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | venv
    | .venv
  )
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
